<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.matrix</groupId>
  <artifactId>gdmatrix</artifactId>
  <version>3.0</version>
  <packaging>pom</packaging>
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
    <repository>
      <id>project-repo</id>
      <url>file://${basedir}/../repository</url>
    </repository>
  </repositories>
  
  <profiles>
    <profile>
      <id>gen-binaries</id>
      <!-- Executes subprojects build with gen-binaries profile --> 
    </profile>
  </profiles>     
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.7.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
<!--            <arg>-Xlint:deprecation</arg>-->
            <arg>-Xlint:removal</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <modules>
    <module>gdmatrix-modgen</module>
    <module>gdmatrix-stubs</module>
    <module>gdmatrix-common</module>
    <module>gdmatrix-aoc</module>
    <module>gdmatrix-ws</module>
    <module>gdmatrix-ant</module>
    <module>gdmatrix-web</module>
    <module>gdmatrix-ide</module>
    <module>gdmatrix-elections</module>
    <module>gdmatrix-client</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.test.skip>true</maven.test.skip>
    <jaxws-ri.version>2.3.5</jaxws-ri.version>
  </properties>

  <distributionManagement>
    <site>
      <id>gdmatrix</id>
      <url>http://gdmatrix.org/</url>
    </site>
  </distributionManagement>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changelog-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <headingDateFormat>dd/MM/yyyy</headingDateFormat>
          <range>15</range>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  
</project>
